--- a/solesgps_street/static/description/index.html
+++ b/solesgps_street/static/description/index.html
@@ -1,7 +1,7 @@
 <section class="oe_container">
     <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan" style="color:#875A7B;">SolesGPS Street </h2>
-        <h3 class="oe_slogan">See your devices on the street online.</h3>
+        <h2 class="oe_slogan" style="color:#875A7B;">SolesGPS Street Online</h2>
+        <h3 class="oe_slogan">See your devices GPS on the street online.</h3>
         <div class="oe_span12">
             <div class="oe_demo oe_picture oe_screenshot">
                 <img src="street_online.png">
@@ -10,37 +10,30 @@
     </div>
 </section>
 
+
 <section class="oe_container oe_dark">
     <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan" style="color:#875A7B;">Fleet management made easy</h2>
-        <div class="oe_span6">
-            
-            <img class="oe_picture oe_screenshot" src="mapa_online.png">
-
-        </div>
-        <div class="oe_span6">
-            <p class='oe_mt32 text-justify'>
-            Algo escrito por mi
-            
-            You won't need any specialized tracking system for company vehicles - with Odoo's smart app, can keep a close eye on your fleet in a few simple clicks. Manage everything through our user-friendly administrative system - fuel log entries, costs and many other features necessary for the management of your company's vehicles.
-            </p>
-        </div>
+        <h2 class="oe_slogan" style="color:#875A7B;">Locate the satellite coordinates</h2>
+        <h3 class="oe_slogan">
+            Locate the satellite coordinates that your GPS devices throw.<br>Have You a tracking provider?<br>Do you use the traccar server?<br>Save that information here and see it on the map.
+        </h3>
     </div>
 </section>
 
-<section class="oe_container">
+
+<section class="oe_container oe_dark">
     <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan" style="color:#875A7B;">Manage leasing and all other contracts</h2>
+        <h2 class="oe_slogan" style="color:#875A7B;">Video demo	</h2>
         <div class="oe_span6">
-            <p class="oe_mt32 text-justify">
-            Supervise all contracts for your vehicles and receive a warning email when contracts reach their expiration date. Several visual tools are put in place to ensure that you'll remember to renew (or end) your contract. Organize the services around the vehicles and communicate with the qualified service providers; manage invoices and notes. Set up a vehicle policy within your company, as well as an insurance policy in order to manage your fleet in the most efficient way. 
-            </p>
-        </div>
-        <div class="oe_span6">
-            <img class="oe_picture oe_screenshot" src="satellite_view.png">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/7Coa-3JJzQk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
 </section>
+
+
+
+
+
 <section class="oe_container oe_dark">
     <div class="oe_row oe_spaced">
         <h2 class="oe_slogan" style="color:#875A7B;">Contact us</h2>
@@ -51,6 +44,8 @@
         </h3>
     </div>
 </section>
+
+
 
 <section class="oe_container oe_separator">
 </section>
